added few additional routes to enable user to edit & share post

--- a/src/components/EditProfile/style.css
+++ b/src/components/EditProfile/style.css
@@ -20,7 +20,8 @@
 }
 
 .edit-profile-top-container {
-    width: 100%;
+    width: 110%;
+    margin: auto;
     height: 25vh;
     display: flex;
     flex-direction: column;
