--- a/src/components/EditPost/style.css
+++ b/src/components/EditPost/style.css
@@ -1,4 +1,4 @@
-.add-post-header {
+/* .edit-post-header {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -30,7 +30,7 @@ textarea {
     font-size: 14px;
     font-weight: 400;
     line-height: 17.36px;
-    min-height: 35%;
+    height: 40%;
     padding: 15px;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -128,7 +128,6 @@ label {
     margin-top: 15px;
     width: 90%;
     height: auto;
-    flex-wrap: wrap;
 }
 
 
@@ -144,4 +143,67 @@ legend {
 
 .selected-files:last-of-type {
     margin-bottom: 200px;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.selected-item .existing-file-preview,
+.selected-item .new-file-preview {
+  width: 75px;
+  height: 60px;
+  object-fit: cover;
+}
+
+.selected-item .remove-item {
+  position: relative;
+}
+
+.selected-item .close-button-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: red;
+  background: white;
+  border-radius: 50%;
+}
+
+
+.selected-files {
+    flex-wrap: wrap;
+}
+
+textarea {
+    min-height: 35%;
 }
