--- a/src/components/Feeds/style.css
+++ b/src/components/Feeds/style.css
@@ -227,9 +227,31 @@
     position: absolute;
     right: 25px;
     border: none;
-    background-color: transparent;
+    background-color: darkgray;
     color: black;
     font-size: 20px;
     cursor: pointer;
     font-weight: bold;
+    padding: 10px;
+    display: flex;
+    border-radius: 50%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.feed-loader {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.feed-loader p {
+    margin-top: 10px;
 }
