--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -47,12 +47,19 @@ h4 {
 
 .back-button {
     border: none;
-    background-color: transparent;
+    background-color: dimgray;
     top: 15px;
     left: 15px;
     position: relative;
     font-size: 22px;
     color: white;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .edit-profile-button {
@@ -86,8 +93,6 @@ h4 {
 }
 
 .profile-details {
-    /* padding:20px; */
-    /* background-color: yellow; */
     position: relative;
     top: -50px;
     /* margin-top: 28px; */
@@ -95,7 +100,7 @@ h4 {
     height: auto;
     display: flex;
     flex-direction: column;
-    background-color: blue;
+    /* background-color: blue; */
     overflow: auto;
     padding: 35px;
     box-sizing: border-box;
@@ -106,9 +111,9 @@ h4 {
     flex-direction: row;
     width: 100%;
     height: auto;
-    background-color: yellow;
+    /* background-color: yellow; */
     position: relative;
-    top: -50px;
+    top: -100px;
     flex-wrap: wrap;
     box-sizing: border-box;
     padding: 15px;
@@ -116,7 +121,7 @@ h4 {
 
 .post-item {
     padding: 15px;
-    background-color: green;
+    /* background-color: green; */
     width: auto;
     height: auto;
     box-sizing: border-box;
@@ -185,4 +190,93 @@ h4 {
 .mypost-delete-icon {
     color: red;
     margin-right: 5px;
+}
+
+
+
+.delete-post-bg-modal-container {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    backdrop-filter: brightness(0.3);
+}
+
+
+.delete-post-bg-modal {
+    width: 300px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    background: white;
+    border-radius: 12px;
+    padding: 20px;
+    position: relative;
+}
+
+
+.delete-post-bg-modal p {
+    margin-top: 22px;
+    margin-bottom: 15px;
+}
+
+
+#cancelbutton-icon {
+    display: flex;
+    width: 35px;
+    height: 30px;
+    align-self: end;
+    background: red;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    border-top-right-radius: 8px;
+}
+
+
+.delete-modal-button-cont {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 15px;
+}
+
+
+#delete-yes-button {
+    background-color: rgb(54, 54, 239);
+    color: white;
+    border-radius: 8px;
+    padding: 15px 33px;
+    border-width: 0px;
+    font-size: 15px;
+}
+
+
+#delete-no-button {
+    background-color: red;
+    color: white;
+    border-radius: 8px;
+    padding: 15px 33px;
+    border-width: 0px;
+    font-size: 15px;
+}
+
+
+
+#no-posts{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 40vh;
+    /* background: yellow; */
+    align-items: center;
 }
