--- a/src/components/Feeds/style.css
+++ b/src/components/Feeds/style.css
@@ -238,6 +238,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    top: 45px;
 }
 
 
@@ -255,3 +256,12 @@
 .feed-loader p {
     margin-top: 10px;
 }
+
+
+
+#feeds-profile-info-cont {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
